# ps2dec-cpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  debug.natvis  package.json  pnpm-lock.yaml  test.csv
debug_cwd/: build.js  build.js.map  main.ts  tsconfig.json
debug_cwd/app/: font-setup.ts
debug_cwd/app/components/: background.tsx  button.tsx  close-button.tsx  flex.tsx  icon.tsx  index.ts  pane.tsx  popover.tsx  separator.ts  tabbed-view.tsx
debug_cwd/app/components/dropdown-menu/: content.tsx  context.tsx  index.ts  item.tsx  menu.tsx
debug_cwd/app/components/popover/: container.tsx  popover.tsx
debug_cwd/app/components/tabbed-view/: index.ts  tab.tsx  tabbed-view.tsx
debug_cwd/app/components/toolbar/: toolbar.tsx
debug_cwd/app/components/workspace-navigator/: index.ts  workspace-navigator.tsx
debug_cwd/app/contexts/: hotkey-ctx.tsx  index.ts  theme-ctx.tsx  workspace-ctx.tsx
debug_cwd/app/hooks/: index.ts  window-mgr-hooks.ts
debug_cwd/app/managers/: binary-mgr.ts  index.ts  theme-mgr.ts  theme-mgr.tsx  window-mgr.tsx  workspace-mgr.ts
debug_cwd/app/themes/: default-themes.ts
debug_cwd/app/types/: binary.ts  index.ts  style.ts  theme.ts  workspace.ts
debug_cwd/app/utils/: extract-style-props.ts  index.ts
debug_cwd/app/windows/: index.ts  types.ts  window-map.ts
debug_cwd/app/windows/main/: MainToolbar.tsx  MainWindow.tsx
debug_cwd/font/: ARIAL.RAW
debug_cwd/modules/: event.ts  font-awesome-brands.ts  font-awesome-regular.ts  font-awesome-solid.ts  is-changed.ts  key-map.ts  plugin-manager.ts  plugin.ts  table.ts  window.ts
debug_cwd/modules/base-ui/: root.tsx  types.ts
debug_cwd/modules/components/: index.ts  window.tsx
debug_cwd/modules/components/vulkan/: debug.tsx  graph.tsx  graphics-pipeline.tsx  index.ts  render-pass.tsx  root.tsx
debug_cwd/modules/hooks/: index.ts  use-combine-refs.ts  use-deep-effect.ts  use-deep-memo.ts  use-depth-layer.ts  use-inject-ref.ts  use-interpolated-state.ts  use-interpolated-style.ts  use-mount-effect.ts  use-optional-controlled-state.ts  use-root-elem.tsx
debug_cwd/modules/math-ext/: index.ts  mat3.ts  mat4.ts  transform.ts  utils.ts  vec2.ts  vec3.ts  vec4.ts
debug_cwd/modules/mini-react/: context.ts  element.ts  fragment.ts  hook.ts  index.ts  logic.ts  types.ts  useEffect.ts  useMemo.ts  useRef.ts  useState.ts  vdom.ts
debug_cwd/modules/ui/: index.ts  root.ts
debug_cwd/modules/ui/components/: box.tsx  geometry.tsx  index.ts
debug_cwd/modules/ui/contexts/: element.tsx  index.ts
debug_cwd/modules/ui/renderer/: element.ts  generator.ts  layout.ts  renderer.ts  shaders.ts  style.ts  tree-recurse.ts
debug_cwd/modules/ui/types/: box-node.ts  elements.ts  events.ts  geometry-node.ts  geometry.ts  index.ts  push-constants.ts  root-node.ts  style.ts  text-node.ts  ui-node.ts  uniforms.ts  vertex.ts
debug_cwd/modules/ui/utils/: box-geometry.ts  clip-rect-mgr.ts  depth-mgr.ts  draw-call.ts  event-mgr.ts  font-mgr.ts  index.ts  instance-mgr.ts  parser.ts  render-context.ts  text-draw.ts  vertex-array.ts  vulkan.ts
debug_cwd/plugins/: index.ts  new_test.tsx  window-mgr.tsx
debug_cwd/plugins/test_plugin/: index.tsx
include/decomp/: decomp.h  types.h
include/decomp/app/: application.h  input.h  logger.h  options.h  plugin.h  plugin_mgr.h  plugin_mgr.hpp  window.h
include/decomp/app/plugins/: scripting.h
include/decomp/cmd/: cmd_log.h  cmd_shutdown.h  command.h  command_listener.h  command_mgr.h  command_mgr.hpp  response.h
include/decomp/comm/: outbound_packet.h  socket.h
include/decomp/comm/packets/: client_command.h  cmd_response.h  cmd_state.h
include/decomp/io/: file.h  tagged_stream.h
include/decomp/utils/: args.h  array.h  array.hpp  buffer.h  buffer.hpp  cli.h  cli_options.h  event.h  event.hpp  exceptions.h  logging.h  math.hpp  socket.h  socket_listener.h  stream.h  stream.hpp  string.h  timer.h  unique_ptr.h  unique_ptr.hpp
include/render/: IWithRendering.h  types.h
include/render/core/: DataFormat.h  FrameContext.h  FrameManager.h
include/render/utils/: AlignedAllocator.h  DebugDraw.h  SimpleDebugDraw.h
include/render/vulkan/: Buffer.h  CommandBuffer.h  ComputePipeline.h  DescriptorSet.h  Format.h  Framebuffer.h  GraphicsPipeline.h  Instance.h  LogicalDevice.h  PhysicalDevice.h  Pipeline.h  Queue.h  QueueFamily.h  RenderPass.h  ShaderCompiler.h  Surface.h  SwapChain.h  Texture.h  UniformBuffer.h  VertexBuffer.h
scripts/: build_builtins.js  react.d.ts
src/: main.cpp
src/app/: application.cpp  input.cpp  logger.cpp  plugin.cpp  plugin_mgr.cpp  register_commands.cpp  window.cpp
src/app/plugins/: bind_application.cpp  bind_math.cpp  bind_msdfgen.cpp  bind_render.cpp  bind_vulkan.cpp  bind_window.cpp  bind_yoga.cpp  scripting.cpp
src/cmd/: cmd_log.cpp  cmd_shutdown.cpp  command.cpp  command_listener.cpp  command_mgr.cpp  response.cpp
src/comm/: outbound_packet.cpp  socket.cpp  socket_listener.cpp
src/comm/packets/: client_command.cpp  cmd_response.cpp  cmd_state.cpp
src/io/: file.cpp  tagged_stream.cpp  tagged_stream_block.cpp
src/render/: IWithRendering.cpp
src/render/core/: DataFormat.cpp  FrameContext.cpp  FrameManager.cpp
src/render/utils/: AlignedAllocator.cpp  SimpleDebugDraw.cpp
src/render/vulkan/: CommandBuffer.cpp  ComputePipeline.cpp  DescriptorSet.cpp  Framebuffer.cpp  GraphicsPipeline.cpp  Instance.cpp  LogicalDevice.cpp  PhysicalDevice.cpp  RenderPass.cpp  ShaderCompiler.cpp  Surface.cpp  SwapChain.cpp  Texture.cpp  UniformBuffer.cpp  VertexBuffer.cpp
src/utils/: args.cpp  buffer.cpp  cli.cpp  cli_options.cpp  exceptions.cpp  logging.cpp  math.cpp  socket.cpp  socket_listener.cpp  stream.cpp  string.cpp  timer.cpp
